# mmpretrain

./: .gitignore  README.md  README_zh-CN.md  UV_USAGE_GUIDE.md  pyproject.toml
.cursor/rules/: cls-mmpretrain.mdc
tools/deployment/: extract_pytorch_model.py  extract_pytorch_model_v2.py
works/: _logger.py  count_size.py  efficientNetV2_b0_v0.py  efficientNetV2_b0_v1.py  efficientNetV2_b0_v2.py  efficientNetV2_b0_v2_source.py  efficientNetV2_xl_tongue_shape_multilabel.py  efficientNetV2_xl_v0.py  efficientNetV2_xl_v2.py  efficientNetV2_xl_v2_WCE.py  efficientNetV2_xl_v3_gemini.py  efficientNetV2_xl_v3_gpt.py  pre_segment_tongue.py  show_datasets.py  test_batch.sh  train.sh  visual_transformer.sh
works/coat_cls/: README_monitor.md  augmentation_summary.md  class_weight_reference.py  coat_color_classification.py  coat_color_classification_show.py  coat_color_convnextV2.py  coat_color_convnextV2Base.py  coat_color_train.sh  data_augmentation_strategies.md  ipython_dataset_guide.py  monitor_training.py  recall_acc_convNextTiny.md  recall_acc_v1.md  recall_acc_v2.md  recall_acc_v3.md  recall_convNextBase.md  start_monitor_background.sh  visualize_all_augmentations.sh
works/datasets/: move2test.py
works/multi_label/: README.md  convert_body_dataset.py  dataset_conversion_guide.md  efficientNetV2_xl_body_morphology_multilabel.py  efficientNetV2_xl_body_morphology_multilabel_gpt.py  efficientNetV2_xl_body_morphology_multilabel_v2.py  multilabel_config_guide.md  multilabel_example.py  prepare_multilabel_dataset.py  quick_start.sh
works/nets/: deeplabv3_plus.py  mobilenetv2.py
works/single_classification/: README.md  README_teeth_normal.md  crack_normal_classification.py  metrics_example.md  monitor_training.py  predict_image.py  predict_single_image.py  swift_normal_classification.py  teeth_normal_classification.py  test_configs.py  train_all.sh  train_crack_normal.sh  train_swift_normal.sh  train_teeth_normal.sh  verify_all_datasets.py  verify_dataset.py  visualize_augmentation.py
works/utils_tool/: README_augmentation_visualization.md  show_pipeline.sh  show_results.py  visualize_augmentation_rgb.py
